# ensemble-assets

./: .gitignore  Cargo.toml
crates/assets/: Cargo.toml
crates/assets/src/: lib.rs
crates/database/: Cargo.toml
crates/database-cli/: Cargo.toml
crates/database-cli/src/: assets.rs  lib.rs  loader.rs  main.rs  resolve.rs  validate.rs
crates/database-cli/tests/: validate_hw1.rs
crates/database/src/: lib.rs  node_ext.rs
crates/database/src/hw1/: abilities.rs  civs.rs  damagetypes.rs  gamedata.rs  leaders.rs  mod.rs  objects.rs  physics.rs  powers.rs  squads.rs  tactics.rs  techs.rs  visual.rs  weapontypes.rs
crates/pipeline/: Cargo.toml
crates/pipeline-cli/: Cargo.toml
crates/pipeline-cli/src/: main.rs
crates/pipeline/src/: lib.rs  source.rs
crates/pipeline/src/hw1/: diagnostics.rs  edit.rs  lightset.rs  loader.rs  manifest.rs  merge.rs  mod.rs  resolve.rs  scenario.rs  stringtable.rs  validate.rs  world.rs
crates/pipeline/tests/: hw1_integration.rs
crates/pipeline/tests/hw1/: base.rs  mod.rs  scenario.rs
crates/watch/: Cargo.toml
crates/watch/src/: lib.rs  watcher.rs
crates/watch/tests/: integration.rs
docs/: lightset-pipeline.md  plan-edit-save.md
save/root.era/art/effects/: videocube_01.vis.xml
save/root.era/art/effects/aegis_bomb/: aegis_bomb.vis.xml  aegis_bomb_creep.vis.xml  bomb_lightningbeam_01.vis.xml  bomb_lightningbeam_head_01.vis.xml  bomb_lightningbeam_tail_01.vis.xml  disruption_ring.vis.xml
save/root.era/art/effects/arbiter_rage/: rage_aura_large_01.vis.xml  rage_aura_medium_01.vis.xml  rage_aura_small_01.vis.xml  rage_healing_01.vis.xml
save/root.era/art/effects/carpet_bombing/: cb_arrow.vis.xml  cb_explosion.vis.xml
save/root.era/art/effects/cleansing/: cleansing_medium_a.vis.xml
save/root.era/art/effects/cryo_bomb/: cryo_bomb.vis.xml
save/root.era/art/effects/fire/: crater_heat_01.vis.xml  smallgenfire_01.vis.xml
save/root.era/art/effects/gravity_ball/: gb_pickup_effect_01.vis.xml  gravity_ball_02.vis.xml
save/root.era/art/effects/hotdrop/: hotdrop_beam.vis.xml  hotdrop_leader.vis.xml
save/root.era/art/effects/macblast/: rocks_large.vis.xml  rocks_medium.vis.xml  rocks_small.vis.xml
save/root.era/art/effects/projectiles/: missile.vis.xml
save/root.era/art/effects/smoke/: crack_steam_01.vis.xml  crack_vapor_01.vis.xml  snow_fog_01.vis.xml
save/root.era/art/effects/special/: building_repairing_01.vis.xml  unit_arbiterfoot_01.vis.xml  unit_arbiterlevelup_01.vis.xml  unit_arbiterwheel_01.vis.xml  unit_brutepull_01.vis.xml  unit_empeffect_01.vis.xml  unit_godrays_01.vis.xml  unit_recovering20sec_01.vis.xml  unit_recovering30sec_01.vis.xml  unit_recovering_01.vis.xml  unit_repairing_01.vis.xml  unit_serenacontrol_01.vis.xml  unit_sparklefoot_01.vis.xml  unit_stunned_01.vis.xml  unit_swapcolor_01.vis.xml  unit_veterancy_01.vis.xml  unit_veterancyhi_01.vis.xml  unit_veterancylo_01.vis.xml
save/root.era/art/environment/sky/: sky_dome_01.vis.xml  skybox_desert.vis.xml
save/root.era/art/system/: quickview.vis.xml
save/root.era/art/system/rallystart_01/: rallystart_01.vis.xml
save/root.era/art/template/: object.vis.xml
save/root.era/data/: abilities.xml  civs.xml  damagetypes.xml  leaders.xml  objects.xml  powers.xml  squads.xml  techs.xml
save/root.era/data/tactics/: cov_air_banshee_01.tactics.xml  cov_air_monitor_02.tactics.xml  cov_air_vampire_01.tactics.xml  cov_bldg_heavyfactory_01.tactics.xml  cov_bldg_megaturret_01.tactics.xml  cov_bldg_shadeturret_01.tactics.xml  cov_bldg_shieldgen_01.tactics.xml  cov_bldg_supplydepot_01.tactics.xml  cov_bldg_turret_01.tactics.xml  cov_bldg_turretaa_01.tactics.xml  cov_bldg_turretai_01.tactics.xml  cov_bldg_turretav_01.tactics.xml  cov_inf_arbiter_02.tactics.xml  cov_inf_brute_01.tactics.xml  cov_inf_brutechief_01.tactics.xml  cov_inf_bruteleader_01.tactics.xml  cov_inf_elite_01.tactics.xml  cov_inf_elitecommando_01.tactics.xml  cov_inf_engineer_01.tactics.xml  cov_inf_grunt_01.tactics.xml  cov_inf_hunter_01.tactics.xml  cov_inf_jackal_01.tactics.xml  cov_inf_needlergrunt_01.tactics.xml  cov_inf_prophet_01.tactics.xml  cov_inf_prophet_02.tactics.xml  cov_inf_suicidegrunt_01.tactics.xml  cov_obj_hotpickup_01.tactics.xml  cov_veh_brutechopper_01.tactics.xml  cov_veh_ghost_01.tactics.xml  cov_veh_locust_01.tactics.xml  cov_veh_scarab_01.tactics.xml  cov_veh_wraith_01.tactics.xml  cpgn_air_pelican_01.tactics.xml  cpgn_inf_jackalsniper_01.tactics.xml  cpgn_inf_needlerelite_01.tactics.xml  cpgn_inf_spartanmg_01.tactics.xml  cpgn_inf_spartanrocket_01.tactics.xml  cpgn_inf_spartansniper_01.tactics.xml  cpgn_npc_anders_01.tactics.xml  cpgn_npc_arcadiapolice_01.tactics.xml  (+150 more)
save/root.era/physics/: banshee.blueprint.xml  banshee.physics.xml  banshee.shp.xml  chopper.blueprint.xml  chopper.physics.xml  cobra.blueprint.xml  cobra.physics.xml  cobra.shp.xml  cov_bldg_barracks_01.blueprint.xml  cov_bldg_barracks_01.physics.xml  cov_bldg_barracks_01.shp.xml  cov_bldg_builder_01.blueprint.xml  cov_bldg_builder_01.physics.xml  cov_bldg_builder_01.shp.xml  cov_bldg_builder_02.blueprint.xml  cov_bldg_builder_02.physics.xml  cov_bldg_builder_03.blueprint.xml  cov_bldg_builder_03.physics.xml  cov_bldg_builder_03.shp.xml  cov_bldg_heavyfactory_01.blueprint.xml  cov_bldg_heavyfactory_01.physics.xml  cov_bldg_heavyfactory_01.shp.xml  cov_bldg_lightfactory_01.blueprint.xml  cov_bldg_lightfactory_01.physics.xml  cov_bldg_lightfactory_01.shp.xml  cov_bldg_megaturret_01.blueprint.xml  cov_bldg_megaturret_01.physics.xml  cov_bldg_megaturret_01.shp.xml  cov_bldg_shadeturret_01.blueprint.xml  cov_bldg_shadeturret_01.physics.xml  cov_bldg_shadeturret_01.shp.xml  cov_bldg_shieldgen_01.blueprint.xml  cov_bldg_shieldgen_01.physics.xml  cov_bldg_shieldgen_01.shp.xml  cov_bldg_shieldsocket_01.blueprint.xml  cov_bldg_shieldsocket_01.physics.xml  cov_bldg_shieldsocket_01.shp.xml  cov_bldg_supplydepot_01.blueprint.xml  cov_bldg_supplydepot_01.physics.xml  cov_bldg_supplydepot_01.shp.xml  (+156 more)
save/root_update.era/data/: gamedata.xml  scenariodescriptions.xml  weapontypes.xml
(+2130 files in other folders)
