[workspace]
resolver = "3"
members = [
    "crates/assets",
    "crates/database",
    "crates/pipeline",
    "crates/pipeline-cli",
    "crates/watch",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/coconutbird/ensemble-assets"
authors = ["coconutbird"]

[workspace.dependencies]
# Internal crates
assets = { path = "crates/assets" }
database = { path = "crates/database" }
pipeline = { path = "crates/pipeline" }

# ensemble-formats crates (git deps)
bdt = { git = "https://github.com/coconutbird/ensemble-formats.git", branch = "dev/prim" }
bdt-serde = { git = "https://github.com/coconutbird/ensemble-formats.git", branch = "dev/prim" }
ddx = { git = "https://github.com/coconutbird/ensemble-formats.git", branch = "dev/prim" }
era = { git = "https://github.com/coconutbird/ensemble-formats.git", branch = "dev/prim" }
uax = { git = "https://github.com/coconutbird/ensemble-formats.git", branch = "dev/prim" }
ugx = { git = "https://github.com/coconutbird/ensemble-formats.git", branch = "dev/prim" }
xmb = { git = "https://github.com/coconutbird/ensemble-formats.git", branch = "dev/prim" }
xtd = { git = "https://github.com/coconutbird/ensemble-formats.git", branch = "dev/prim" }
xtt = { git = "https://github.com/coconutbird/ensemble-formats.git", branch = "dev/prim" }

watch = { path = "crates/watch" }

# External dependencies
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
