[package]
name = "pipeline"
description = "Ensemble asset pipeline — ERA loading, scenario loading, full world resolution"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
assets.workspace = true
bdt.workspace = true
bdt-serde.workspace = true
database.workspace = true
era.workspace = true
serde.workspace = true
ugx.workspace = true
xmb.workspace = true

[dev-dependencies]
dotenvy.workspace = true

