[package]
name = "pipeline"
description = "Ensemble asset pipeline — ERA loading, scenario loading, full world resolution"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
assets.workspace = true
bdt.workspace = true
bdt-serde.workspace = true
database.workspace = true
ddx.workspace = true
era.workspace = true
serde.workspace = true
serde_json.workspace = true
uax.workspace = true
ugx.workspace = true
xmb.workspace = true
xtd.workspace = true
xtt.workspace = true

[dev-dependencies]
dotenvy.workspace = true
tempfile = "3.27.0"

[[test]]
name = "hw1"
path = "tests/hw1/mod.rs"
